[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/BG/blacksmoke_top_half.png" type="Texture" id=1]
[ext_resource path="res://Assets/cross2.png" type="Texture" id=2]
[ext_resource path="res://Map/Room.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/glow.png" type="Texture" id=4]
[ext_resource path="res://Map/Map.gd" type="Script" id=5]
[ext_resource path="res://Map/player_marker.gd" type="Script" id=6]
[ext_resource path="res://Map/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://Map/EnemyIcon.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 112, 64 )

[node name="Map" type="Node2D"]
light_mask = 0
position = Vector2( 152, 88 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
light_mask = 2
scale = Vector2( 0.25, 0.156 )
texture = ExtResource( 1 )

[node name="Room1" parent="." instance=ExtResource( 3 )]
position = Vector2( -80, 4 )

[node name="TileMap" parent="Room1" index="0"]
tile_data = PoolIntArray( -327681, 2, 0, -393216, 2, 0, -393215, 2, 0, -393214, 2, 0, -393213, 2, 0, -393212, 2, 0, -393211, 2, 0, -393210, 2, 0, -393209, 2, 0, -393208, 2, 0, -393207, 2, 0, -393206, 2, 0, -393205, 2, 0, -393204, 2, 0, -393203, 2, 0, -393202, 2, 0, -393182, 2, 0, -393181, 2, 0, -393180, 2, 0, -393179, 2, 0, -393178, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 2, 0, -327675, 2, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -327671, 2, 0, -327670, 2, 0, -327669, 2, 0, -327668, 2, 0, -327667, 2, 0, -327666, 2, 0, -327665, 2, 0, -327664, 2, 0, -327663, 2, 0, -327662, 2, 0, -327661, 2, 0, -327660, 2, 0, -327659, 2, 0, -327648, 2, 0, -327647, 2, 0, -327646, 2, 0, -327645, 2, 0, -327644, 2, 0, -327643, 2, 0, -327642, 2, 0, -327641, 2, 0, -196611, 2, 0, -196610, 0, 0, -196609, 0, 1, -262144, 0, 1, -262143, 0, 1, -262142, 0, 1, -262141, 0, 1, -262140, 0, 1, -262139, 0, 1, -262138, 0, 1, -262137, 0, 1, -262136, 0, 1, -262135, 0, 1, -262134, 0, 1, -262133, 0, 1, -262132, 0, 1, -262131, 0, 1, -262130, 0, 5, -262129, 2, 0, -262128, 2, 0, -262127, 2, 0, -262126, 2, 0, -262125, 2, 0, -262124, 2, 0, -262123, 2, 0, -262122, 2, 0, -262121, 2, 0, -262117, 2, 0, -262116, 2, 0, -262115, 2, 0, -262114, 2, 0, -262113, 2, 0, -262112, 2, 0, -262111, 2, 0, -262110, 2, 0, -262109, 2, 0, -262108, 2, 0, -262107, 2, 0, -262106, 2, 0, -262105, 2, 0, -131076, 2, 0, -131075, 0, 0, -131074, 0, 131079, -131073, 0, 262146, -196608, 0, 262146, -196607, 0, 262146, -196606, 0, 262146, -196605, 0, 262146, -196604, 0, 262146, -196603, 0, 262146, -196602, 0, 262146, -196601, 0, 262146, -196600, 0, 262146, -196599, 0, 262146, -196598, 0, 262146, -196597, 0, 262146, -196596, 0, 262146, -196595, 0, 262146, -196594, 0, 131078, -196593, 0, 1, -196592, 0, 1, -196591, 0, 1, -196590, 0, 1, -196589, 0, 5, -196588, 2, 0, -196587, 2, 0, -196586, 2, 0, -196585, 2, 0, -196581, 2, 0, -196580, 2, 0, -196579, 2, 0, -196578, 2, 0, -196577, 2, 0, -196576, 2, 0, -196575, 2, 0, -196574, 2, 0, -196573, 2, 0, -196572, 2, 0, -196571, 2, 0, -196570, 2, 0, -196569, 2, 0, -65541, 2, 0, -65540, 2, 0, -65539, 0, 131072, -65538, 0, 262146, -65537, 0, 262146, -131072, 0, 262146, -131071, 0, 262146, -131070, 0, 262146, -131069, 0, 262146, -131068, 0, 262146, -131067, 0, 262146, -131066, 0, 262146, -131065, 0, 262146, -131064, 0, 262146, -131063, 0, 262146, -131062, 0, 262146, -131061, 0, 262146, -131060, 0, 262146, -131059, 0, 262146, -131058, 0, 262146, -131057, 0, 262146, -131056, 0, 262146, -131055, 0, 262146, -131054, 0, 262146, -131053, 0, 131078, -131052, 0, 1, -131051, 0, 1, -131050, 0, 5, -131049, 2, 0, -131048, 2, 0, -131047, 2, 0, -131046, 2, 0, -131045, 2, 0, -131044, 2, 0, -131043, 0, 0, -131042, 0, 1, -131041, 0, 1, -131040, 0, 1, -131039, 0, 1, -131038, 0, 1, -131037, 0, 1, -131036, 0, 1, -131035, 0, 1, -131034, 0, 5, -131033, 2, 0, -131032, 2, 0, -5, 2, 0, -4, 2, 0, -3, 0, 131072, -2, 0, 262146, -1, 0, 262146, -65536, 0, 262146, -65535, 0, 262146, -65534, 0, 262146, -65533, 0, 262146, -65532, 0, 262146, -65531, 0, 262146, -65530, 0, 262146, -65529, 0, 262146, -65528, 0, 262146, -65527, 0, 262146, -65526, 0, 262146, -65525, 0, 262146, -65524, 0, 262146, -65523, 0, 262146, -65522, 0, 262146, -65521, 0, 262146, -65520, 0, 262146, -65519, 0, 262146, -65518, 0, 262146, -65517, 0, 262146, -65516, 0, 262146, -65515, 0, 262146, -65514, 0, 131078, -65513, 0, 5, -65512, 2, 0, -65511, 2, 0, -65510, 2, 0, -65509, 2, 0, -65508, 2, 0, -65507, 0, 131072, -65506, 0, 262146, -65505, 0, 262146, -65504, 0, 262146, -65503, 0, 262146, -65502, 0, 262146, -65501, 0, 262146, -65500, 0, 262146, -65499, 0, 262146, -65498, 0, 131077, -65497, 2, 0, -65496, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 0, 131072, 65534, 0, 262146, 65535, 0, 262146, 0, 0, 262146, 1, 0, 262146, 2, 0, 262146, 3, 0, 262146, 4, 0, 262146, 5, 0, 262146, 6, 0, 262146, 7, 0, 262146, 8, 0, 262146, 9, 0, 262146, 10, 0, 262146, 11, 0, 262146, 12, 0, 262146, 13, 0, 262146, 14, 0, 262146, 15, 0, 262146, 16, 0, 262146, 17, 0, 262146, 18, 0, 262146, 19, 0, 262146, 20, 0, 262146, 21, 0, 262146, 22, 0, 262146, 23, 0, 131078, 24, 0, 5, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 0, 131072, 30, 0, 262146, 31, 0, 262146, 32, 0, 262146, 33, 0, 262146, 34, 0, 262146, 35, 0, 262146, 36, 0, 262146, 37, 0, 262146, 38, 0, 131077, 39, 2, 0, 40, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 0, 131072, 131070, 0, 262146, 131071, 0, 262146, 65536, 0, 262146, 65537, 0, 262146, 65538, 0, 262146, 65539, 0, 262146, 65540, 0, 262146, 65541, 0, 65542, 65542, 0, 327681, 65543, 0, 327681, 65544, 0, 327681, 65545, 0, 327681, 65546, 0, 327681, 65547, 0, 327681, 65548, 0, 327681, 65549, 0, 327681, 65550, 0, 65543, 65551, 0, 262146, 65552, 0, 262146, 65553, 0, 262146, 65554, 0, 262146, 65555, 0, 262146, 65556, 0, 262146, 65557, 0, 262146, 65558, 0, 262146, 65559, 0, 262146, 65560, 0, 131078, 65561, 0, 1, 65562, 0, 1, 65563, 0, 1, 65564, 0, 1, 65565, 0, 131079, 65566, 0, 262146, 65567, 0, 262146, 65568, 0, 262146, 65569, 0, 262146, 65570, 0, 262146, 65571, 0, 262146, 65572, 0, 262146, 65573, 0, 65542, 65574, 0, 327685, 65575, 2, 0, 65576, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 0, 327680, 196606, 0, 327681, 196607, 0, 327681, 131072, 0, 327681, 131073, 0, 327681, 131074, 0, 327681, 131075, 0, 327681, 131076, 0, 327681, 131077, 0, 327685, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 0, 327680, 131087, 0, 327681, 131088, 0, 65543, 131089, 0, 262146, 131090, 0, 262146, 131091, 0, 262146, 131092, 0, 262146, 131093, 0, 262146, 131094, 0, 262146, 131095, 0, 262146, 131096, 0, 262146, 131097, 0, 262146, 131098, 0, 262146, 131099, 0, 262146, 131100, 0, 262146, 131101, 0, 262146, 131102, 0, 262146, 131103, 0, 262146, 131104, 0, 262146, 131105, 0, 262146, 131106, 0, 262146, 131107, 0, 262146, 131108, 0, 262146, 131109, 0, 131077, 131110, 2, 0, 131111, 2, 0, 131112, 2, 0, 262139, 2, 0, 262140, 2, 0, 262141, 2, 0, 262142, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196624, 0, 327680, 196625, 0, 327681, 196626, 0, 65543, 196627, 0, 262146, 196628, 0, 262146, 196629, 0, 262146, 196630, 0, 262146, 196631, 0, 262146, 196632, 0, 262146, 196633, 0, 262146, 196634, 0, 262146, 196635, 0, 262146, 196636, 0, 262146, 196637, 0, 262146, 196638, 0, 262146, 196639, 0, 262146, 196640, 0, 262146, 196641, 0, 262146, 196642, 0, 262146, 196643, 0, 262146, 196644, 0, 262146, 196645, 0, 131077, 196646, 2, 0, 196647, 2, 0, 327679, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 262160, 2, 0, 262161, 2, 0, 262162, 0, 327680, 262163, 0, 65543, 262164, 0, 262146, 262165, 0, 262146, 262166, 0, 262146, 262167, 0, 262146, 262168, 0, 262146, 262169, 0, 262146, 262170, 0, 262146, 262171, 0, 262146, 262172, 0, 262146, 262173, 0, 262146, 262174, 0, 262146, 262175, 0, 262146, 262176, 0, 262146, 262177, 0, 65542, 262178, 0, 327681, 262179, 0, 327681, 262180, 0, 327681, 262181, 0, 327685, 262182, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 0, 327680, 327700, 0, 327681, 327701, 0, 65543, 327702, 0, 262146, 327703, 0, 262146, 327704, 0, 262146, 327705, 0, 262146, 327706, 0, 262146, 327707, 0, 262146, 327708, 0, 262146, 327709, 0, 262146, 327710, 0, 262146, 327711, 0, 65542, 327712, 0, 327681, 327713, 0, 327685, 327714, 2, 0, 327715, 2, 0, 327716, 2, 0, 327717, 2, 0, 327718, 2, 0, 393231, 2, 0, 393232, 2, 0, 393233, 2, 0, 393234, 2, 0, 393235, 2, 0, 393236, 2, 0, 393237, 0, 327680, 393238, 0, 327681, 393239, 0, 65543, 393240, 0, 262146, 393241, 0, 262146, 393242, 0, 262146, 393243, 0, 262146, 393244, 0, 65542, 393245, 0, 327681, 393246, 0, 327681, 393247, 0, 327685, 393248, 2, 0, 393249, 2, 0, 393250, 2, 0, 393251, 2, 0, 393252, 2, 0, 393253, 2, 0, 393254, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 0, 327680, 458776, 0, 327681, 458777, 0, 327681, 458778, 0, 327681, 458779, 0, 327681, 458780, 0, 327685, 458781, 2, 0, 458782, 2, 0, 458783, 2, 0, 458784, 2, 0, 458785, 2, 0, 458786, 2, 0, 458787, 2, 0, 458788, 2, 0, 458789, 2, 0, 458790, 2, 0, 524308, 2, 0, 524309, 2, 0, 524310, 2, 0, 524311, 2, 0, 524312, 2, 0, 524313, 2, 0, 524314, 2, 0, 524315, 2, 0, 524316, 2, 0, 524317, 2, 0, 524318, 2, 0, 524319, 2, 0, 524320, 2, 0, 524321, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 2, 0, 589852, 2, 0, 589853, 2, 0, 589854, 2, 0, 589855, 2, 0 )

[node name="Icons" parent="Room1" index="1"]
scale = Vector2( 1, 1 )

[node name="Door" parent="Room1/Icons/Doors" index="0" instance=ExtResource( 7 )]
position = Vector2( 40, -16 )

[node name="Door2" parent="Room1/Icons/Doors" index="1" instance=ExtResource( 7 )]
position = Vector2( 107, 3 )

[node name="Door3" parent="Room1/Icons/Doors" index="2" instance=ExtResource( 7 )]
position = Vector2( 140, 20 )
z_placement = "FG"

[node name="EnemyIcon" parent="Room1/Icons/Enemies" index="0" instance=ExtResource( 8 )]
position = Vector2( 64, 0 )

[node name="player_marker" type="KinematicBody2D" parent="."]
position = Vector2( -120, -48 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 524288
collision_mask = 524288
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="player_marker"]
position = Vector2( -0.515625, -0.515411 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
color = Color( 5, 5, 5, 0.26 )
energy = 0.9
shadow_enabled = true

[node name="icon" type="Sprite" parent="player_marker"]
modulate = Color( 5.2, 0.23, 0.23, 1 )
position = Vector2( -0.515137, -0.515259 )
rotation = -0.0273153
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_marker"]
visible = false
position = Vector2( 2.86102e-06, 2.86102e-06 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="player_marker"]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_marker/Area2D"]
shape = SubResource( 2 )
[connection signal="body_entered" from="player_marker/Area2D" to="player_marker" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="player_marker/Area2D" to="player_marker" method="_on_Area2D_body_exited"]

[editable path="Room1"]
